Fixed-Shipping-method-title-overlapping-on-edit-icon-in-mobile

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_order-summary.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_order-summary.less
@@ -204,6 +204,12 @@
             &:extend(.abs-sidebar-totals-mobile all);
         }
     }
+
+    .opc-block-shipping-information {
+        .shipping-information-title {
+            font-size: 2.4rem;
+        }
+    }
 }
 
 //
